# Generated by Django 5.2.1 on 2026-04-17 00:07

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('aranha_estetica', '0008_add_indexes_constraints'),
    ]

    operations = [
        migrations.RemoveConstraint(
            model_name='atendimento',
            name='chk_atendimento_status',
        ),
        migrations.AlterField(
            model_name='atendimento',
            name='status',
            field=models.CharField(choices=[('PENDENTE', 'Pendente de Confirmação'), ('AGENDADO', 'Agendado'), ('CONFIRMADO', 'Confirmado'), ('REALIZADO', 'Realizado'), ('CANCELADO', 'Cancelado'), ('FALTOU', 'Faltou'), ('REAGENDADO', 'Reagendado')], default='PENDENTE', max_length=20),
        ),
        migrations.AlterField(
            model_name='notificacao',
            name='tipo',
            field=models.CharField(choices=[('LEMBRETE', 'Lembrete'), ('CONFIRMACAO', 'Confirmação'), ('CANCELAMENTO', 'Cancelamento'), ('NPS', 'Pesquisa NPS'), ('APROVACAO', 'Aprovação Profissional')], default='LEMBRETE', max_length=30),
        ),
        migrations.AddIndex(
            model_name='atendimento',
            index=models.Index(fields=['cliente'], name='idx_atendimento_cliente'),
        ),
        migrations.AddConstraint(
            model_name='atendimento',
            constraint=models.CheckConstraint(condition=models.Q(('status__in', ['PENDENTE', 'AGENDADO', 'CONFIRMADO', 'REALIZADO', 'CANCELADO', 'FALTOU', 'REAGENDADO'])), name='chk_atendimento_status_v2'),
        ),
    ]
