---
title: Diagrama de Estados (UML) — Ciclo de vida do Atendimento
---
stateDiagram-v2
    direction LR
    [*] --> PENDENTE: agendamento público (OTP)
    [*] --> AGENDADO: agendamento pela recepção

    PENDENTE --> AGENDADO: aprovar()
    PENDENTE --> CONFIRMADO: confirmar()
    PENDENTE --> CANCELADO: rejeitar / cancelar / job 24h
    PENDENTE --> REAGENDADO: marcar_reagendado()

    AGENDADO --> CONFIRMADO: confirmar() — link do D-1
    AGENDADO --> REALIZADO: marcar_realizado()
    AGENDADO --> CANCELADO: cancelar()
    AGENDADO --> FALTOU: marcar_falta()
    AGENDADO --> REAGENDADO: marcar_reagendado()

    CONFIRMADO --> REALIZADO: marcar_realizado()
    CONFIRMADO --> CANCELADO: cancelar()
    CONFIRMADO --> FALTOU: marcar_falta()
    CONFIRMADO --> REAGENDADO: marcar_reagendado()

    REALIZADO --> [*]
    CANCELADO --> [*]
    FALTOU --> [*]
    REAGENDADO --> [*]

    note right of REALIZADO
      Exige termo aceito ou override auditado.
      Efeitos: zera faltas, debita sessão de
      pacote (não em retorno), comissão,
      cashback da indicadora, retorno gratuito
    end note
    note right of CANCELADO
      Estorna comissão e cashback,
      avisa a lista de espera (horário futuro)
    end note
    note right of FALTOU
      Só a equipe marca. registrar_falta():
      bloqueia o online no limite (padrão 3)
    end note
    note right of REAGENDADO
      Novo atendimento herda preço, retorno
      e ficha; avisa a lista de espera
    end note
